--- a/nintendo switch/switch_oled.html
+++ b/nintendo switch/switch_oled.html
@@ -172,12 +172,12 @@
                     <p><i class="bi bi-play-circle-fill"></i></p>
                 </a>
             </div>
-            <figure id="vid">
-                <video autoplay loop muted>
-                    <source src="./img/new_bg_movie.mp4" type="video/mp4">
-                </video>
-            </figure>
         </div>
+        <figure id="vid">
+            <video autoplay loop muted>
+                <source src="./img/new_bg_movie.mp4" type="video/mp4">
+            </video>
+        </figure>
     </section>
 
     <section id="display">
@@ -194,7 +194,9 @@
         </div>
 
         <div id="big_screen" class="wrap">
-            <h4><span>BIG SCREEN</span><span id="slim">화면의 베젤이 슬림해지면서 넓어진</span><p></p>7인치 OLED 디스플레이</h4>
+            <h4><span>BIG SCREEN</span><span id="slim">화면의 베젤이 슬림해지면서 넓어진</span>
+                <p></p>7인치 OLED 디스플레이
+            </h4>
             <div id="screen">
                 <figure>
                     <video loop autoplay muted>
@@ -208,14 +210,16 @@
             <p>다양한 게임 속 세계를 선명한 색감으로 그려냅니다.</p>
 
             <div id="compare">
-                <p><img src="./img/bigscreen_compare1.png" alt="닌텐도 스위치 OLED 모델의 화면 모습"><span>Nintendo Switch (OLED모델)</span></p>
+                <p><img src="./img/bigscreen_compare1.png" alt="닌텐도 스위치 OLED 모델의 화면 모습"><span>Nintendo Switch
+                        (OLED모델)</span></p>
                 <p><img src="./img/bigscreen_compare2.png" alt="닌텐도 스위치 일반 모델의 화면 모습"><span>Nintendo Switch</span></p>
                 <button><i class="bi bi-question-circle-fill"></i>&nbsp;&nbsp;「OLED 디스플레이」란</button>
                 <div>픽셀 하나하나의 유기 EL 소자가 스스로 발광하면서 화면을 표시하는 디스플레이로,<p></p>픽셀의 발광을 끄는 것으로 깊은 검은색을 표현할 수 있는 것이 특징입니다.</div>
             </div>
         </div>
 
-        <p class="sect-end"><img src="./img/pic_overview_display.jpg" alt="닌텐도 스위치 OLED 모델로 젤다의 전설 브레스 오브 더 와일드를 플레이하는 모습"></p>
+        <p class="sect-end"><img src="./img/pic_overview_display.jpg"
+                alt="닌텐도 스위치 OLED 모델로 젤다의 전설 브레스 오브 더 와일드를 플레이하는 모습"></p>
     </section>
 
     <section id="stand">
@@ -287,12 +291,12 @@
             </div>
 
             <div id="stand-info">
-                <p><img src="./img/pic_tablemode.png" alt="닌텐도 스위치 OLED가 좌측을 향해 스탠드를 통해 서있다."></p>
-                <div id="stand_right">
-                    <p class="heading">본인이 원하는 각도로 테이블 모드를 즐긴다</p>
+                <p><img src="./img/pic_tablemode.png" alt="닌텐도 스위치 OLED가 좌측을 향해 스탠드를 통해 서있다."><span></span></p>
+                <div id="stand-right">
+                    <p class="heading">본인이<br>원하는 각도로<br>테이블 모드를 즐긴다</p>
                     <p>뒷면의 스탠드를 세우고 컨트롤러를 나눠 들면</p>
-                    <p>언제, 어디서든, 화면을 함께 보며 테이블 모드로</p>
-                    <p>대전 플레이나 협력 플레이를 즐길 수 있습니다.</p>
+                    <p>언제, 어디서든, 화면을 함께 보며</p>
+                    <p>테이블 모드로 대전 플레이나 협력 플레이를 즐길 수 있습니다.</p>
                     <p>「Nintendo Switch (OLED 모델)」은</p>
                     <p>「프리 스톱 방식」의 넓은 스탠드를 채택.</p>
                     <p>보기 편한 각도로 확실히 고정할 수 있기 때문에,</p>
@@ -300,13 +304,20 @@
                 </div>
             </div>
 
-            <p class="sect-end"><img src="./img/pic_overview_adjust.jpg"
-                    alt="닌텐도 스위치 OLED 모델을 스탠드를 통해 세워두고, 슈퍼 마리오 오디세이를 플레이하고 있다."></p>
         </div>
+        <p class="sect-end"><img src="./img/pic_overview_adjust.jpg"
+                alt="닌텐도 스위치 OLED 모델을 스탠드를 통해 세워두고, 슈퍼 마리오 오디세이를 플레이하고 있다."></p>
     </section>
 
     <section id="others">
         <div class="wrap">
+            <h4><span>OTHERS</span>추가 사항</h4>
+            <div id="others_right">
+                <p class="on"><img src="./img/pic_other1.png" alt="닌텐도 스위치 OLED의 조이콘"></p>
+                <p class="on"><img src="./img/pic_other2.png" alt="닌텐도 스위치 OLED의 독"></p>
+                <p class="on"><img src="./img/pic_other3.png" alt="닌텐도 스위치 OLED가 연결된 TV"></p>
+            </div>
+
             <div id="others_left">
                 <div id="dock">
                     <p class="heading">유선 LAN 단자를 탑재한 새로운 독</p>
@@ -316,31 +327,28 @@
                         TV 모드에서 더욱 안정된 온라인 플레이를 즐길 수 있습니다.</p>
                 </div>
                 <div id="memory">
+                    <p><img src="./img/pic_memory.png" alt="닌텐도 스위치 OLED 모델 독 사진"></p>
                     <p class="heading">64GB의 본체 저장 메모리</p>
-                    <p>본체 저장 메모리는 「64GB」.
-                        추가로 microSD 카드<span>(별매)</span>를 이용하면, 저장 용량을 확장할 수 있습니다.
-                        마음에 드는 게임을 다운로드해두면,
-                        언제, 어디서든, 바로 플레이할 수 있습니다.
-                        <span>*데이터를 저장할 수 있는 용량은 시스템 영역을 제외한 용량입니다.</span>
+                    <p>본체 저장 메모리는 「64GB」.</p>
+                    <p>추가로 microSD 카드<span>(별매)</span>를 이용하면, 저장 용량을 확장할 수 있습니다.
+                        마음에 드는 게임을 다운로드해두면 <br>
+                        언제, 어디서든, 바로 플레이할 수 있습니다.</p>
+                    <p><span>※ 데이터를 저장할 수 있는 용량은 시스템 영역을 제외한 용량입니다.</span>
                     </p>
                 </div>
             </div>
 
-            <div id="others_right">
-                <p class="on"><img src="./img/pic_other1.png" alt="닌텐도 스위치 OLED의 조이콘"></p>
-                <p class="on"><img src="./img/pic_other2.png" alt="닌텐도 스위치 OLED의 독"></p>
-                <p class="on"><img src="./img/pic_other3.png" alt="닌텐도 스위치 OLED가 연결된 TV"></p>
-            </div>
-
             <div id="speaker">
+                <div><span></span></div>
+                <p><img src="./img/pic_sound_body.png" alt="닌텐도 스위치 OLED 모델이 눕혀져 있다."></p>
                 <p class="heading">새로워진 스피커</p>
-                <p>휴대 모드와 테이블 모드에서 깨끗한 사운드로 게임 플레이를 즐길 수 있습니다.</p>
+                <p>휴대 모드와 테이블 모드에서 깨끗한 사운드로 <br>게임 플레이를 즐길 수 있습니다.</p>
             </div>
         </div>
     </section>
 
-    <section id="galleary">
-        <h4><span>Nintendo Switch (OLED 모델)</span>PHOTOS</h4>
+    <section id="gallery">
+        <h4><span>Nintendo Switch OLED</span>PHOTOS</h4>
         <ul id="photos">
             <li><img src="./img/gallery1.jpg" alt="닌텐도 스위치 OLED의 조이콘과 독이 테이블 위에 놓여있다."></li>
             <li><img src="./img/gallery2.jpg" alt="닌텐도 스위치 OLED 본체가 독에 꽂혀있다."></li>
@@ -354,13 +362,13 @@
 
     <section id="mode">
         <div class="wrap">
-            <h4>Nintendo Switch의 기본 기능</h4>
+            <h4>NINTENDO SWITCH의 기본 기능</h4>
             <div id="mode_top">
-                <p><img src="./img/mode_top.png" alt="닌텐도 스위치 OLED가 독에서 꺼내지고 있다."></p>
+                <p><img src="./img/mode_top.png" alt="닌텐도 스위치 OLED가 독에서 꺼내지고 있다."><span></span></p>
                 <div id="mode_top_right">
                     <p class="heading"><span>언제, 어디서든, 누구와도,</span>3가지 플레이 모드</p>
                     <p>「Nintendo Switch&trade;」는 플레이 장면에 맞추어 형태를 바꾸는 게임기.</p>
-                    <p>언제, 어디에서나, 마음 가는대로, 자유로운 스타일로 게임을 즐길 수 있습니다.</p>
+                    <p>언제, 어디에서나, 마음 가는대로,<br> 자유로운 스타일로 게임을 즐길 수 있습니다.</p>
                 </div>
             </div>
             <ul id="mode_list">
@@ -369,12 +377,12 @@
                         <img src="./img/pic_mode1.jpg" alt="4인 가족이 TV모드를 통해 닌텐도 스위치 OLED로 게임을 즐기는 모습">
                     </div>
                     <div class="mode_right">
-                        <div id="mode_text_head">
-                            <h5><span>01</span>TV 모드</h5>
-                            <p><img src="./img/local-mode__tv.jpg" alt="닌텐도 스위치 OLED가 TV 모드로 작동하고 있는 모습"></p>
+                        <div class="mode_text_head">
+                            <h5><span class="num">01</span><span>TV 모드</span></h5>
                         </div>
-                        <div id="mode_text_bottom">
+                        <div class="mode_text_bottom">
                             <h6>TV의 큰 화면으로 즐긴다</h6>
+                            <p><img src="./img/local-mode__tv.jpg" alt="닌텐도 스위치 OLED가 TV 모드로 작동하고 있는 모습"></p>
                             <p>Nintendo Switch 독을 TV에 연결하여 본체를 세팅하면, TV의 큰 화면으로 게임을 즐길 수 있습니다.</p>
                         </div>
                     </div>
@@ -384,12 +392,12 @@
                         <img src="./img/pic_mode2.jpg" alt="두사람이 테이블 모드를 통해 닌텐도 스위치 OLED로 게임을 즐기는 모습">
                     </div>
                     <div class="mode_right">
-                        <div id="mode_text_head">
-                            <h5><span>02</span>테이블 모드</h5>
-                            <p><img src="./img/local-mode__table.jpg" alt="닌텐도 스위치 OLED가 테이블 모드로 작동하고 있는 모습"></p>
+                        <div class="mode_text_head">
+                            <h5><span class="num">02</span><span>테이블 모드</span></h5>
                         </div>
-                        <div id="mode_text_bottom">
+                        <div class="mode_text_bottom">
                             <h6>화면을 공유</h6>
+                            <p><img src="./img/local-mode__table.jpg" alt="닌텐도 스위치 OLED가 테이블 모드로 작동하고 있는 모습"></p>
                             <p>본체 스탠드를 세우고 컨트롤러를 나눠 들면, TV가 없는 곳에서도 바로 화면을 함께 보며 플레이를 즐길 수 있습니다.</p>
                         </div>
                     </div>
@@ -399,12 +407,12 @@
                         <img src="./img/pic_mode3.jpg" alt="한사람이 휴대 모드를 통해 닌텐도 스위치 OLED로 게임을 즐기는 모습">
                     </div>
                     <div class="mode_right">
-                        <div id="mode_text_head">
-                            <h5><span>03</span>휴대 모드</h5>
-                            <p><img src="./img/local-mode__hh.jpg" alt="닌텐도 스위치 OLED가 휴대 모드로 작동하고 있는 모습"></p>
+                        <div class="mode_text_head">
+                            <h5><span class="num">03</span><span>휴대 모드</span></h5>
                         </div>
-                        <div id="mode_text_bottom">
+                        <div class="mode_text_bottom">
                             <h6>갖고 다니며 플레이</h6>
+                            <p><img src="./img/local-mode__hh.jpg" alt="닌텐도 스위치 OLED가 휴대 모드로 작동하고 있는 모습"></p>
                             <p>이동 중이나 외출했을 때, 장소에 구애 받지 않고 혼자서 플레이하거나, 마음이 맞는 동료와 모여서 함께 플레이를 즐길 수 있습니다.</p>
                         </div>
                     </div>
@@ -442,7 +450,7 @@
             <div class="multi_text">
                 <p><span>인터넷으로 연결</span>
                     <a href="#">「Nintendo Switch Online(유료)」</a>에 가입하면 멀리 떨어진 친구나 전 세계 플레이어와도 대전·협력 플레이가 가능합니다.
-                    스마트폰용 앱과 연동시켜 친구와 만나거나 보이스챗을 하면서 플레이하는 것도 가능.
+                    스마트폰용 앱과 연동시켜 친구와 만나거나 보이스챗을 하면서 플레이하는 것도 가능합니다.
                 </p>
             </div>
         </div>
@@ -450,10 +458,10 @@
 
     <section id="line-up">
         <div class="wrap">
-            <h4>상품 라인업</h4>
+            <h4><span>Line-up</span>상품 라인업</h4>
             <div id="release">
-                <p>발매일: <span>2021.10.8</span>(금)</p>
-                <p>희망소비자가격: <span>415,000</span>원</p>
+                <p>발매일 : <span>2021.10.8</span>(금)</p>
+                <p>희망소비자가격 : <span>415,000</span>원</p>
             </div>
 
             <ul id="model">
@@ -461,44 +469,61 @@
                     <p class="model_photo">
                         <img src="./img/pic_model_white.jpg" alt="화이트 컬러의 닌텐도 스위치 OLED모델 사진">
                     </p>
-                    <div class="model_info"><a href="#">
-                            <img src="./img/img-Package--white.png" alt="화이트 컬러의 닌텐도 스위치 OLED모델의 패키지 사진">
+                    <div class="model_info">
+                        <img src="./img/img-Package--white.png" alt="화이트 컬러의 닌텐도 스위치 OLED모델의 패키지 사진">
+                        <div class="model_text">
                             <p><span>Nintendo Switch (OLED 모델)</span>화이트</p>
-                            <p><i class="fa-solid fa-circle-chevron-right"></i> 세트 내용</p>
-                        </a></div>
+                            <p><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 패키지 구성품</a></p>
+                        </div>
+                    </div>
                 </li>
                 <li>
                     <p class="model_photo">
                         <img src="./img/pic_model_blueRed.jpg" alt="네온 블루·네온 레드 컬러의 닌텐도 스위치 OLED모델 사진">
                     </p>
-                    <div class="model_info"><a href="#">
-                            <img src="./img/img-Package--blueRed.png" alt="네온 블루·네온 레드 컬러의 닌텐도 스위치 OLED모델의 패키지 사진">
+                    <div class="model_info">
+                        <img src="./img/img-Package--blueRed.png" alt="네온 블루·네온 레드 컬러의 닌텐도 스위치 OLED모델의 패키지 사진">
+                        <div class="model_text">
                             <p><span>Nintendo Switch (OLED 모델)</span>네온 블루·네온 레드</p>
-                            <p><i class="fa-solid fa-circle-chevron-right"></i> 세트 내용</p>
-                        </a></div>
+                            <p><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 패키지 구성품</a></p>
+                        </div>
+                    </div>
                 </li>
             </ul>
 
             <ul id="edition">
-                <li><a href="#"><img src="./img/oled-custom-banner-totk--tab.jpg"
-                            alt="닌텐도 스위치 OLED 젤다의 전설 티어스 오브 더 킹덤 에디션의 발매 홍보 이미지"></a></li>
-                <li><a href="#"><img src="./img/oled-custom-banner-splatoon3--tab.png"
-                            alt="닌텐도 스위치 OLED 스플래툰3 에디션의 발매 홍보 이미지"></a></li>
-                <li><a href="#"><img src="./img/oled-custom-banner-pokemon--tab.jpg"
-                            alt="닌텐도 스위치 OLED 포켓몬스터 스칼렛·바이올렛 에디션의 발매 홍보 이미지"></a></li>
+                <li><a href="#">
+                    <picture>
+                        <source media="(max-width: 740px)" srcset="./img/oled-custom-banner-totk--m.jpg" alt="">
+                        <img src="./img/oled-custom-banner-totk--tab.jpg"
+                            alt="닌텐도 스위치 OLED 젤다의 전설 티어스 오브 더 킹덤 에디션의 발매 홍보 이미지">
+                    </picture></a></li>
+                <li><a href="#">
+                    <picture>
+                        <source media="(max-width: 740px)" srcset="./img/oled-custom-banner-splatoon3--m.png">
+                        <img src="./img/oled-custom-banner-splatoon3--tab.png"
+                                alt="닌텐도 스위치 OLED 스플래툰3 에디션의 발매 홍보 이미지"></a></li>
+                    </picture>
+                <li><a href="#">
+                    <picture>
+                        <source media="(max-width: 740px)" srcset="./img/oled-custom-banner-pokemon--m.jpg">
+                        <img src="./img/oled-custom-banner-pokemon--tab.jpg"
+                                alt="닌텐도 스위치 OLED 포켓몬스터 스칼렛·바이올렛 에디션의 발매 홍보 이미지"></a></li>
+                    </picture>
             </ul>
         </div>
     </section>
 
     <section id="detail">
-        <p><i class="fa-solid fa-circle-chevron-right"></i>『Nintendo Switch OLED』 주요 기능·사양</p>
-        <p><i class="fa-solid fa-circle-chevron-right"></i>Nintendo Switch 다른 모델과의 비교</p>
-        <p><i class="fa-solid fa-circle-chevron-right"></i>주변기기</p>
-        <p><i class="fa-solid fa-circle-chevron-right"></i>Nintendo Switch Online</p>
+        <p><a href="#"><i class="fa-solid fa-circle-chevron-right"></i>『Nintendo Switch OLED』 주요 기능·사양</a></p>
+        <p><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> Nintendo Switch 다른 모델과의 비교</a></p>
+        <p><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> 주변기기</a></p>
+        <p><a href="#"><i class="fa-solid fa-circle-chevron-right"></i> Nintendo Switch Online</a></p>
     </section>
 
     <section id="question">
         <div class="wrap">
+            <h4><span>Q & A</span>자주묻는 질문</h4>
             <ul id="ques-list">
                 <li>
                     <div class="ques">
@@ -516,7 +541,7 @@
                 </li>
                 <li>
                     <div class="ques">
-                        <p><i class="fa-solid fa-circle-chevron-right"></i></p>
+                        <p><i class="fa-solid fa-question"></i></p>
                         <p>「Nintendo Switch (OLED 모델)」의 독은 「Nintendo Switch」에서도 사용할 수 있나요?<i
                                 class="bi bi-plus-circle"></i></p>
                     </div>
@@ -536,7 +561,6 @@
                         <p><i class="bi bi-arrow-return-right"></i></p>
                         <p>사용하실 수 있습니다.
                             <span>※본체 업데이트가 필요한 경우가 있습니다.</span></p>
-                        </p>
                     </div>
                 </li>
                 <li>
