--- a/nintendo_switch/switch_oled.html
+++ b/nintendo_switch/switch_oled.html
@@ -160,8 +160,8 @@
     <section id="new">
         <div id="new_bg">
             <div class="wrap">
-                <p>Nintendo Switch 패밀리에 <p></p>「Nintendo Switch&trade;(OLED 모델)」이 새롭게 추가되었습니다.</p>
-                <p>언제, 어디서든, 누구와도,<p></p>OLED 모델이기에 가능한 선명한 색감의 화면으로 게임을 즐길 수 있습니다.</p>
+                <p>Nintendo Switch 패밀리에<br>「Nintendo Switch&trade;(OLED 모델)」이 새롭게 추가되었습니다.</p>
+                <p>언제, 어디서든, 누구와도,<br>OLED 모델이기에 가능한 선명한 색감의 화면으로 게임을 즐길 수 있습니다.</p>
             </div>
             <div id="new_bg_text">
                 <a href="https://youtu.be/0qjGn_AunuA" target="_blank">
