--- a/nintendo_switch/switch_oled.html
+++ b/nintendo_switch/switch_oled.html
@@ -18,6 +18,8 @@
     <script src="https://kit.fontawesome.com/7aa93c4da2.js" crossorigin="anonymous"></script>
     <script src="../js/header.js" defer></script>
     <script src="../js/footer.js" defer></script>
+    <script src="./js/scroll.js" defer></script>
+    <script src="./js/qna.js" defer></script>
 </head>
 
 <body>
@@ -199,11 +201,11 @@
             </h4>
             <div id="screen">
                 <figure>
-                    <video loop autoplay muted playsinline>
+                    <video loop autoplay muted playsinline class="off">
                         <source src="./img/pic_bigscreen_video.mp4" type="video/mp4">
                     </video>
                 </figure>
-                <img src="./img/pic_bigscreen.png" alt="닌텐도 스위치 OLED의 모습">
+                <img class="off" src="./img/pic_bigscreen.png" alt="닌텐도 스위치 OLED의 모습">
             </div>
             <p>화면의 베젤이 슬림해지면서 7인치로 넓어진 OLED 디스플레이.</p>
             <p>바람에 나부끼는 풀숲, 몰려오는 적, 최고 속도로 달려나가는 카트 등,</p>
